# isit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
res/: words.txt
src/: main.rs
